<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_titel_text"
        android:id="@+id/main_activity_titel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:textSize="40sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_editText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:hint="Username"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_button"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_titel"
        tools:layout_editor_absoluteX="50dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_editText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:hint="Password"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_button"
        app:layout_constraintTop_toBottomOf="@+id/username_editText"
        tools:layout_editor_absoluteX="50dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_activity_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/main_activity_button_next"/>

</androidx.constraintlayout.widget.ConstraintLayout>